--- a/src/jet/CMakeLists.txt
+++ b/src/jet/CMakeLists.txt
@@ -34,7 +34,7 @@ file(GLOB sources
     ${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/obj/*.cpp)
 
 set(ispc_sources
-    exp_array_simple.ispc)
+    core_api_array_ispc_kernels.ispc)
 
 # Custom-build event
 set(jet_header_gen_py ${root_dir}/scripts/header_gen.py)
